--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ layout: default
       <div class="attribution read-more"><div class="authors"> {% include authors.html authors=post.authors %}</div></div>
       {% endif %}
 
+      <div class="attribution read-more">{{ post.date | date: "%B %e, %Y" }}</div>
+
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More &rarr;</a>
     </article>
   {% endfor %}
