Revert "* First cut of author pages"
This reverts commit 05dc5da39894887979dc63af9680898aa8e3a7e7.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
       </div>
 
       {% if post.authors %}
-      <div class="attribution read-more"><div class="authors"> {% include authors.html post_authors=post.authors %}</div></div>
+      <div class="attribution read-more"><div class="authors"> {% include authors.html authors=post.authors %}</div></div>
       {% endif %}
 
       <div class="attribution read-more">{{ post.date | date: "%B %e, %Y" }}</div>
